package com.smartenergymanager.service;

import com.smartenergymanager.model.Batiment;
import com.smartenergymanager.model.Releve;
import java.util.ArrayList;
import java.util.List;

/**
 * Service dédié à l'importation et l'exportation de données (CSV, etc.).
 */
public class ImportExportService {
    
    /**
     * Importe des relevés depuis un fichier CSV.
     */
    public List<Releve> importCSV(String filePath) {
        return new ArrayList<>();
    }

    /**
     * Génère des données fictives pour tester les graphiques et analyses.
     */
    public void genererDonneesTest(Batiment b) {
        // Logique de simulation
    }
}
